--- a/docs/.style/global-config.sass
+++ b/docs/.style/global-config.sass
@@ -12,7 +12,7 @@ $black: #222222
 $drop-shadow: rgba(22, 22, 22, 0.2)
 $white: #FFF
 $pearl: #f6f7f7
-$sidebar-collapsed: #347193
+$menu-open: #347193
 $navbar-light-brand-color: $white
 $navbar-light-brand-hover-color: $white
 $navbar-light-color: $white
